# CodexBar

./: .gitignore  LINUX_CODEX_USAGE_PLAN.md  README.md  pyproject.toml
examples/: linux-codex-usage.service  polybar-script.sh  waybar-module.jsonc
src/linux_codex_usage/: __init__.py  cache.py  cli.py  codexbar_client.py  config.py  models.py  normalize.py  server.py
src/linux_codex_usage/formatters/: cost_text_formatter.py  json_formatter.py  text_formatter.py  waybar_formatter.py
tests/: __init__.py  test_cache.py  test_codexbar_client.py  test_cost_text_formatter.py  test_formatters.py  test_normalize.py  test_status_text_formatter.py
tests/fixtures/: codexbar_usage.json
